--- a/src/assets/css/game.css
+++ b/src/assets/css/game.css
@@ -6,8 +6,6 @@ html,body{
 height: 100%; margin: 0; padding: 0;
 
 }
-
-
 body{
 	padding: 0px;
 	background-color: #000;
@@ -63,6 +61,22 @@ ol {
 
 }
 
+div.grid {
+    background: #fff;
+    background-image:
+        linear-gradient(rgba(60,60,60,.3) 1px, transparent 0),
+        linear-gradient(90deg, rgba(60,60,60,.3) 1px, transparent 0),
+        linear-gradient(DarkGrey 1px, transparent 0),
+        linear-gradient(90deg, DarkGrey 1px, transparent 0);
+    background-size: 
+            15px 15px,
+            15px 15px,
+            75px 75px,
+            75px 75px;
+    width: 100%;
+    height: 200px;
+}
+
 /*-------------------------------------------
      基本版面設定區
 -------------------------------------------*/
@@ -85,7 +99,6 @@ ol {
 }
 
 .container-wap{
-	
 	width: 96%;
 	margin-right: auto;
 	margin-left: auto;
@@ -109,14 +122,17 @@ ol {
 .video-box{
 	border: 2px solid #644d31;
 	float: left;
-	width: 70%;
+	width: 65%;
 }
 .bp-box{
 	border: 1px solid #fff;
 	float: left;
-	width: 70%;
-	background-color: #FFF;
-	height: 50%;
+	width: 65%;
+	background-size: contain;
+	/* background-image: url('../../images/Stand-bg.jpg'); */
+	/* background-repeat: repeat; */
+	/* background-position: left top; */
+	/* background-color: #666; */
 }
 
 .coin-area{
@@ -124,8 +140,8 @@ ol {
 	width: 100%;
 	background-color: #1e1e1e;
 	border: 0px solid #333;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 .coin-area .s{
@@ -141,8 +157,8 @@ ol {
 .stand-box{
 	border: 1px solid #262626;
 	float: left;
-	width: 30%;
-	background-image: url('../../images/Stand-bg.jpg');
+	width: 35%;
+	background-image: url(../../images/Stand-bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
@@ -157,6 +173,8 @@ ol {
 	border-top-style: solid;
 	border-top-color: #CCC;
 }
+
+
 .stand-box .ems{
 	float: left;
 	width: 100%;
@@ -178,13 +196,13 @@ ol {
 }
 
 .tabs-area{
-float: left;
-width: 30%;
-/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
-background: -moz-linear-gradient(top,  rgba(56,56,56,0.65) 1%, rgba(55,55,55,0.65) 3%, rgba(52,52,52,0) 9%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+	float: left;
+	width: 35%;
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
+	background: -moz-linear-gradient(top,  rgba(56,56,56,0.65) 1%, rgba(55,55,55,0.65) 3%, rgba(52,52,52,0) 9%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 
 }
 
@@ -580,18 +598,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8);: */
 }
 .coin-menu1:hover,.coin-menu1-current{
 	background-image: url('../../images/coin.png');
 	background-position: 0px -65px;
 	float: left;
-	/* height: 53px;
-	width: 65px; */
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu2{
 	background-image: url('../../images/coin.png');
@@ -600,7 +614,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu2:hover,.coin-menu2-current{
 	background-image: url('../../images/coin.png');
@@ -609,7 +622,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 
 .coin-menu3{
@@ -619,7 +631,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu3:hover,.coin-menu3-current{
 	background-image: url('../../images/coin.png');
@@ -628,7 +639,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu4{
 	background-image: url('../../images/coin.png');
@@ -637,7 +647,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu4:hover,.coin-menu4-current{
 	background-image: url('../../images/coin.png');
@@ -646,7 +655,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu5{
 	background-image: url('../../images/coin.png');
@@ -655,7 +663,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 .coin-menu5:hover,.coin-menu5-current{
 	background-image: url('../../images/coin.png');
@@ -664,7 +671,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	height: 65px;
 	width: 79px;
 	zoom:0.8;
-	/* transform: scale(0.8); */
 }
 /*-------------------------------------------
      網格設定區
@@ -693,11 +699,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	width: 10%;
 	background-color: #1e1101;
 	border: 1px solid #654d31;
-	background-image: url('../../images/left-bg.jpg');
+	background-image: url(../../images/left-bg.jpg);
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: relative;
-	height: 100%;height: 100vh;
+	/* height: 100vh; */
 }
 .gem-main{
 	float: left;
@@ -721,7 +727,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 -------------------------------------------*/
 .flex {
   display: flex;
-  /* height: 180px; */
+  height: 280px;
   padding: 0px;
   flex-wrap: wrap;
 }
@@ -736,6 +742,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	font-size: 2rem;
 	border: 1px solid #FFF;
 	text-align: center;
+	line-height: 1.55em;
 }
 
 .yellow{
@@ -784,7 +791,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	padding-top: 10px;
 	padding-bottom: 10px;
 	color: #d2c0a8;
-	line-height: 1.75em;
+	line-height: 1.55em;
 }
 
 
@@ -810,7 +817,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	width: 80%;
 }
 
-
 .align-items-end{
 	-ms-flex-align: end!important;
 	align-items: flex-end!important;
@@ -822,6 +828,50 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 }
 
 
+.font-totel{
+	color: #fff;
+	float: left;
+	width: 100%;
+	background-color: rgba(2,29,35,0.5);
+	line-height: 1.5em;
+	text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+	
+.coin-menu1{
+	zoom:0.7;
+}
+.coin-menu1:hover,.coin-menu1-current{
+	zoom:0.7;
+}
+.coin-menu2{
+	zoom:0.7;
+}
+.coin-menu2:hover,.coin-menu2-current{
+	zoom:0.7;
+}
+
+.coin-menu3{
+	zoom:0.7;
+}
+.coin-menu3:hover,.coin-menu3-current{
+	zoom:0.7;
+}
+.coin-menu4{
+	zoom:0.7;
+}
+.coin-menu4:hover,.coin-menu4-current{
+	zoom:0.7;
+}
+.coin-menu5{
+	zoom:0.7;
+}
+.coin-menu5:hover,.coin-menu5-current{
+	zoom:0.7;
+}
+
+}
 	
 /*-------------------------------------------
      欄目設定區
@@ -831,7 +881,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	width: 100%;
 	background-color: #1e1101;
 	border: 1px solid #654d31;
-	background-image: url('../../images/left-bg.jpg');
+	background-image: url(../../images/left-bg.jpg);
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: relative;
@@ -858,14 +908,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	-ms-user-select: none;
 	user-select: none;
 	background-image: none;
-	font-size: 128%;
+	font-size: 108%;
 	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
 	text-decoration: none;
 	color: #fff6d5;
-	padding-top: 5px;
-	padding-right: 10px;
-	padding-bottom: 5px;
-	padding-left: 10px;
+	padding-top: 0px;
+	padding-right: 5px;
+	padding-bottom: 0px;
+	padding-left: 5px;
 	margin-top: 5px;
 	margin-right: 0px;
 	margin-bottom: 5px;
@@ -906,7 +956,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', end
 	border: 2px solid #262626;
 	float: left;
 	width: 100%;
-	background-image: url('../../images/Stand-bg.jpg');
+	background-image: url(../../images/Stand-bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
@@ -934,18 +984,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', end
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 1.2rem;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	font-size: 1rem;
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 
 .bp-box{
 	border: 1px solid #fff;
 	float: left;
-	width:100%;
-	background-color: #FFF;
-	height: auto;
+	width: 100%;
+	background-size: contain;
+	background-image: url(../../images/cardroad_bg_20.png);
+	background-repeat: repeat;
+	background-position: left top;
+	background-color: #666;
 }
+
 
 .tabs-area{
 	float: left;
@@ -953,24 +1007,46 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', end
 	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
 	background: -moz-linear-gradient(top,  rgba(56,56,56,0.65) 1%, rgba(55,55,55,0.65) 3%, rgba(52,52,52,0) 9%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 	background-color: #000;
 	background-position: bottom;
 }
 
 	}
-@media screen and (max-width: 768px) {.container{
+@media screen and (max-width: 768px) {
+.tabs-area{
+	float: left;
+	width: 100%;
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
+	background: -moz-linear-gradient(top,  rgba(56,56,56,0.65) 1%, rgba(55,55,55,0.65) 3%, rgba(52,52,52,0) 9%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+	background-color: #000;
+	background-position: bottom;
+	display: none;
+	}	
+	.container{
 	width: 760px;
-}
+	}
+
+.coin-area{
+	float: left;
+	width: 100%;
+	background-color: #1e1e1e;
+	border: 0px solid #333;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	text-align: center;
+	}
 	}
 	
 	@media screen and (max-width: 414px) {.container{
 	width: 400px;
-}
+	}
 	}
 	
-@media screen and (max-width: 375px) {.container{
+	@media screen and (max-width: 375px) {.container{
 	width: 360px;
-}
+	}
 	}	
 	
