--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -990,9 +990,19 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
 }
 
 @media screen and (max-width: 1024px) {
+  .container-waps {
+    height: auto;
+  }
+  .flexs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
   .header {
     width: 100%;
-    height: 50px;
+    height: 100px;
   }
   .header-logo {
     width: 15%;
@@ -1008,6 +1018,8 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .header-btn {
     width: 30%;
+    line-height: 4.75rem;
+    font-size: 205%;
   }
   .header-bottom {
     display: none;
@@ -1015,15 +1027,12 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   .font-total {
     line-height: 1.5em;
   }
-  .mainGame {
-    width: 100%;
-  }
-  /*-------------------------------------------
-     按鈕設定區
--------------------------------------------*/
   .video-box {
     width: 100%;
-    height: 325px;
+    height: 560px;
+  }
+  .mainGame {
+    width: 100%;
   }
   .betArea {
     border: 2px solid #262626;
@@ -1034,25 +1043,16 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .betArea-mobile {
     display: block;
+    height: 280px;
   }
   .betArea-mobile-container {
-    height: 130px;
+    height: 280px;
   }
-  .container-waps {
-    height: auto;
-  }
-  .flexs {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+  .coin {
+    zoom: 1.5;
   }
   .betArea-item {
-    font-size: 1.5rem;
-  }
-  .betArea-mobile {
-    height: 130px;
+    font-size: 2.5rem;
   }
   .gameHistory {
     width: 100%;
@@ -1061,26 +1061,35 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
     background-repeat: repeat;
     background-position: left top;
   }
+  .lightBox {
+    display: block;
+  }
+  .caritem {
+    zoom: 0.22;
+  }
   .tabsArea {
     display: none;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .header {
+    height: 70px;
+  }
   .header-btn {
-    width: 20%;
+    line-height: 2.75rem;
   }
   .video-box {
-    height: 325px;
+    height: 400px;
   }
   .lightBox {
     display: block;
   }
   .betArea-mobile {
-    height: 160px;
+    height: 180px;
   }
   .betArea-mobile-container {
-    height: 160px;
+    height: 180px;
   }
   .tabsArea {
     display: none;
@@ -1097,28 +1106,36 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
     font-size: 2rem;
   }
   .coin {
-    zoom: 0.7;
+    zoom: 1.2;
   }
 }
 
 @media screen and (max-width: 414px) {
+  .header {
+    height: 50px;
+  }
   .header-btn {
     width: 26%;
+    line-height: 1.75rem;
+    font-size: 130%;
   }
   .video-box {
-    height: 320px;
+    height: 220px;
   }
   .betArea {
-    height: 340px;
+    height: 300px;
   }
   .betArea-mobile {
-    height: 240px;
+    height: 211px;
   }
   .betArea-mobile-container {
-    height: 240px;
+    height: 211px;
   }
   .betArea-item {
     font-size: 1.5rem;
+  }
+  .coin {
+    zoom: 0.9;
   }
   .stand-mobile-container {
     height: 187px;
@@ -1132,8 +1149,23 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
 }
 
 @media screen and (max-width: 375px) {
+  .video-box {
+    height: 195px;
+  }
+  .betArea {
+    height: 260px;
+  }
+  .betArea-mobile {
+    height: 179px;
+  }
+  .betArea-mobile-container {
+    height: 179px;
+  }
   .betArea-item {
     font-size: 1.5rem;
+  }
+  .coin {
+    zoom: 0.8;
   }
   .caritem {
     zoom: 0.15;
